# fastapi_example

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  alembic.ini  docker-compose.yaml  dockerfile  grafana-dashboard.json  prometheus.yml  pyproject.toml  readme.md  requirements.in  requirements.txt  requirements_dev.txt
.github/workflows/: ci-cd.yaml  main.yml
app/: database.py  exceptions.py  main.py  router.py
app/api/admin_roles/: exceptions.py  repository.py  router.py  services.py
app/api/auth/: constanct.py  exceptions.py  router.py  schemas.py  services.py  utils.py
app/api/common/: repository.py  schemas.py  services.py  utils.py
app/api/images/: router.py  services.py
app/api/posts/: repository.py  router.py  schemas.py  services.py
app/api/products/: repository.py  router.py  schemas.py  services.py
app/api/profiles/: exceptions.py  repository.py  router.py  schemas.py  services.py
app/api/sentry_prometheus/: router.py
app/api/users/: dependencies.py  exceptions.py  repository.py  router.py  schemas.py  services.py  utils.py
app/api/utils/: __init__.py
app/config/: __init__.py  config.py  task_worker.py
app/models/: __init__.py  portalroles.py  post.py  product.py  profile.py  user.py  users.py
app/notifications/: base_notification.py  email_notification.py  templates.py  utils.py
app/tasks/: email_and_resize_image_tasks.py  email_templates.py  resize_image_tasks.py
docker/: app.sh  celery.sh
migrations/: env.py
migrations/versions/: 072621e6efd5_init.py  23e975b03aca_init.py  54f775d4f0bc_add_posts1.py  953e75eae9ae_init.py  bef3d8a87a97_add_profile.py  c70b33c73966_init.py  cac8924a071e_init.py  f763cab05e8c_add_product.py
