[tool.poetry]
name = "fastapi example"
version = "0.1.0"
description = "fastapi example"
authors = ["Erofeev Nikita <erofeev.nik.it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.setuptools]
py-modules = []

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git',
    '__pycache__',
    '*.yml.enc',
    '*/migrations/*',
    'grafana-dashboard.json',
    'grafana-dashboard.json',
    '*/docker/*',
    'prometheus.yml',
    '*/venv/*',
    '*/env/*',
]


[tool.black]
line-length = 120
skip-string-normalization = true
exclude = '''
\\.git|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|grafana-dashboard\\.json
|\\*/docker/\\*
|prometheus\\.yml
|venv
|env
'''

[tool.flake8]
max-line-length = 120
exclude = '''
\\.git|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|grafana-dashboard\\.json
|\\*/docker/\\*
|prometheus\\.yml
|venv
|env
'''
#exclude = '''
#/(
#    \.git
#  | __pycache__
#  | \.yml\.enc
#  | \*/migrations/\*
#  | grafana-dashboard\.json
#  | \*/docker/\*
#  | prometheus\.yml
#)/
#'''

